# antidbg

./: .gitignore  BUILD.md  CMakeLists.txt  LICENSE  README.md  antidbg.sln  antidbg.vcxproj  antidbg.vcxproj.filters
antidebug/: CMakeLists.txt  adbg.c  adbg.h
antidebug/api/: dbgobjhandle.c  dbgobjhandle.h  dbgpresent.asm  dbgpresent.c  dbgpresent.h  job.c  job.h  outdbgstring.c  outdbgstring.h  procdbgflag.c  procdbgflag.h  procdbgport.c  procdbgport.h  rdbgpresent.asm  rdbgpresent.c  rdbgpresent.h  setdbgfltstate.c  setdbgfltstate.h  sysdbgcontrol.c  sysdbgcontrol.h  timing.c  timing.h  window.c  window.h
antidebug/archived/: README.md  api.h  blockinput.c  blockinput.h  context.c  dbgactproc.c  dbgactproc.h  dbgpresent.asm  lowfraghp.c  lowfraghp.h  ntldt.c  ntldt.h  ntqvirtualmem.c  procdbgflag.asm  procdbgport.asm  rdbgpresent.asm  rtldbginf.c  rtlheapinf.c  selfdebug.c  selfdebug.h  unhndlexcpfilter.asm  unhndlexcpfilter.c  winver.h
antidebug/asm/: dbgbreak.c  dbgbreak.h  ice.c  ice.h  instcnt.c  instcnt.h  int2d.c  int2d.h  int3.c  int3.h  lbr_btf.c  lbr_btf.h  movss.c  movss.h  popf.c  popf.h  prehop.c  prehop.h  sckreg.c  sckreg.h  stckseg.c  stckseg.h
antidebug/core/: a.py  atcptr.c  atcptr.h  callback.c  callback.h  debug.c  debug.h  guard.c  guard.h  handler.c  handler.h  hasher.c  hasher.h  module.c  module.h  monitor.c  monitor.h  nttypes.h  random.c  random.h  syscall-core.S  syscall-core.asm  syscall.c  syscall.h  syscall_converter.py  syscalls.h  thrmng.c  thrmng.h
antidebug/exceptions/: dbgprintex.c  dbgprintex.h  hwbreakp2.c  hwbreakp2.h  pgexcbp.c  pgexcbp.h  raiseexc.c  raiseexc.h  unhexcp.c  unhexcp.h
antidebug/exceptions/kernel/: ntsetdbgfilterst.c
antidebug/exceptions/x86/: unhndlexcpfilter.asm  unhndlexcpfilter.c
antidebug/flags/: crtlevent.c  crtlevent.h  dbgobjhandle.asm  dbgobjhandle.c  dbgobjhandle.h  duphnd.c  duphnd.h  job.c  job.h  kerneldbg.c  kerneldbg.h  loadlib.c  loadlib.h  ntglobalflag.c  ntglobalflag.h  ntldt.c  ntldt.h  prntproc.c  prntproc.h  procdbgflag.asm  procdbgflag.c  procdbgflag.h  procdbgport.asm  procdbgport.c  procdbgport.h  prochpflag.c  prochpflag.h  prochpforceflag.c  prochpforceflag.h  race.c  race.h  suspend.c  suspend.h  timing.c  timing.h  window.c  window.h  winver.h
antidebug/flags/archived/: rtldbginf.c  rtlheapinf.c
antidebug/hook/: api.c  api.h  hook.c  ishooked.c  ishooked.h  libMinHook.x64.lib
antidebug/memory/: dbgactproc.c  dbgactproc.h  dbgp.c  dbgp.h  heap.c  heap.h  hwbreakp.c  hwbreakp.h  lowfraghp.c  lowfraghp.h  mapview.c  mapview.h  membreak.c  membreak.h  membreakp.c  membreakp.h  ntglobalflag.c  ntglobalflag.h  peb.c  peb.h  readstck.c  readstck.h  vrtalloc.c  vrtalloc.h  workset.c  workset.h
antidebug/memory/archived/: ntqvirtualmem.c
antidebug/object/: clshandle.c  clshandle.h  clsinvhandle.c  clsinvhandle.h  crtfile.c  crtfile.h  dbgobj.c  dbgobj.h  device.c  device.h  loadlib.c  loadlib.h  opnproc.c  opnproc.h  prothnd.c  prothnd.h  sysdbgctl.c  sysdbgctl.h
antidebug/scripts/: generate_at&t_stubs.py  syscall_converter.py
